# grpc_test_client

./: .gitignore  CMakeLists.txt
src/: MachineStatusReader.h  ShapeReader.h  TestClient.cpp  TestClient.h  main.cpp
